<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_hazcat</name>
  <version>0.0.0</version>
  <description>rmw implementation for Hazcat, a zero copy framework for heterogenous memory</description>
  <maintainer email="oren.bell@wustl.edu">Oren Bell</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>microcdr</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>hazcat</depend>
  <depend>hazcat_allocators</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>test_msgs</test_depend>
  <test_depend>std_msgs</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
